finish first part front-end 🏋️‍♀️

--- a/client/index.html
+++ b/client/index.html
@@ -24,6 +24,7 @@
                     name="name"
                     id="name"
                     placeholder="name please 👱‍♂️"
+                    required
                 />
 
                 <label for="content">Quack</label>
@@ -34,6 +35,7 @@
                     placeholder="place your quack 🦆..."
                     cols="30"
                     rows="10"
+                    required
                 ></textarea>
 
                 <button class="button-primary" type="submit">
@@ -41,9 +43,10 @@
                 </button>
             </form>
             <div class="loading">
-                <!-- <img src="assets/loading.gif" alt="loading..." /> -->
+                <img src="assets/loading.gif" alt="loading..." />
             </div>
         </main>
         <footer></footer>
     </body>
+    <script src="client.js"></script>
 </html>
