finish the backend 🦾

--- a/client/index.html
+++ b/client/index.html
@@ -45,6 +45,7 @@
             <div class="loading">
                 <img src="assets/loading.gif" alt="loading..." />
             </div>
+            <div class="quacks-container"></div>
         </main>
         <footer></footer>
     </body>
